--- a/create_post.html
+++ b/create_post.html
@@ -27,7 +27,9 @@
   </style>
 </head>
 
+  <script type="module" src="assets/js/auth/dashboard.js"></script>
   <script type="module" src="assets/js/dashboard/post.js"></script>
+  <script type="module" src="assets/js/utils/utils.js"></script>
 
 <body>
 
@@ -90,6 +92,14 @@
           <span style="font-size: 18px;">Your Posts</span>
         </a>
       </li>
+      <p style="margin-top: 350px;">
+        
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="#">
+            <i class="bi bi-box-arrow-left"></i>
+            <span id="btn_logout" style="font-size: 18px;">Sign Out</span>
+          </a>
+        </li>
     </ul>
   </aside>  
 
@@ -110,7 +120,7 @@
       <div class="modal-header">
       </div>
       <div class="modal-body" style="padding: 20px;">
-        <form name="form_posts">
+        <form id="form_posts">
           <input type="hidden" id="user_id" name="user_id">
           <div class="form-group" style="margin-bottom: 20px;">
             <label for="title" style="font-family: 'Roboto Slab', serif; font-size: 22px; color: #39035f;">Write a title or your title:</label>
@@ -125,7 +135,7 @@
             <input type="file" class="form-control" name="image" id="image" style="width: 100%; border-radius: 25px;">
           </div>
           <div class="form-group" style="text-align: right; ">
-            <input type="submit" id="btnreply" name="btnreply" class="btn btn-primary" style="font-family: 'Roboto Slab', serif; background-color: #BE79EF; color: #fff; border: none; border-radius: 25px; padding: 10px 20px; cursor: pointer; font-size: 22px;">
+            <input type="submit" class="btn btn-primary" style="font-family: 'Roboto Slab', serif; background-color: #BE79EF; color: #fff; border: none; border-radius: 25px; padding: 10px 20px; cursor: pointer; font-size: 22px;">
           </div>
           <!-- Notification -->
           </br>
