--- a/socmed.html
+++ b/socmed.html
@@ -25,6 +25,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <script type="module" src="assets/js/auth/dashboard.js"></script>
+  <script type="module" src="assets/js/utils/utils.js"></script>
+
 </head>
 
 
@@ -107,6 +110,14 @@
           <span style="font-size: 18px;">Your Posts</span>
         </a>
       </li>
+      <p style="margin-top: 350px;">
+        
+        <li class="nav-item">
+          <a class="nav-link collapsed" href="#">
+            <i class="bi bi-box-arrow-left"></i>
+            <span id="btn_logout" style="font-size: 18px;">Sign Out</span>
+          </a>
+        </li>
     </ul>
   </aside> 
 
