--- a/wel.html
+++ b/wel.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="assets/css/style.css" rel="stylesheet" />
-
+  
+  <script type="module" src="assets/js/utils/utils.js"></script>
 </head>
 <body style="background: rgba(242,235,247,1);">
 
